# Beaver-Blueprint

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  activity.py  document.py  issue.py  milestone.py  plan.py  progress.py  project.py  research.py
backend/app/routers/: activity.py  dashboard.py  documents.py  images.py  issues.py  milestones.py  plans.py  progress.py  projects.py  research.py
backend/app/schemas/: __init__.py  activity.py  document.py  issue.py  milestone.py  plan.py  progress.py  project.py  research.py
backend/app/services/: activity.py
backend/tests/: conftest.py  test_issues.py  test_plans.py  test_projects.py  test_research.py
frontend/: README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: activity.ts  client.ts  documents.ts  images.ts  issues.ts  milestones.ts  plans.ts  progress.ts  projects.ts  research.ts
frontend/src/components/: AgentUpdateBanner.tsx  Breadcrumb.tsx  CreateIssueModal.tsx  CreateProjectModal.tsx  Layout.tsx  MarkdownRenderer.tsx  MarkdownToolbar.tsx  StatusBadge.tsx
frontend/src/context/: SidebarContext.ts
frontend/src/hooks/: useAgentUpdates.ts  useApi.ts  useDarkMode.ts
frontend/src/pages/: Dashboard.tsx  DiscoveryView.tsx  DocEditor.tsx  DocsView.tsx  IssueBoard.tsx  IssueDetail.tsx  PlanEditor.tsx  (+3 more)
mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
(+1 files in other folders)
