[project]
name = "beaver-blueprint-mcp"
version = "0.1.0"
description = "Beaver Blueprint MCP Server for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-slugify>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
